working out kinks in oauth paths
