# Contacts-Project/swagger.json
@@ -22,16 +22,6 @@
         }
       }
     },
-    "/github/callback": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/logout": {
       "get": {
         "description": "",
